queries and query results

--- a/ODBC_test/obdc_test.ipynb
+++ b/ODBC_test/obdc_test.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyodbc"
+    "import pyodbc\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
     "    server = 'localhost',\n",
     "    port = 5432,\n",
-    "    database = 'crowdfunding_db',\n",
+    "    database = 'movie_db',\n",
     "    username = 'postgres',\n",
     "    password = 'postgres')\n",
     "\n",
@@ -35,122 +36,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Public-key actuating projection\n",
-      "Fundamental user-facing productivity\n",
-      "Organic foreground leverage\n",
-      "Adaptive context-sensitive architecture\n",
-      "Distributed holistic neural-net\n",
-      "Virtual secondary open architecture\n",
-      "Object-based attitude-oriented analyzer\n",
-      "Innovative didactic analyzer\n",
-      "Synergistic cohesive adapter\n",
-      "Stand-alone discrete Graphical User Interface\n",
-      "Profit-focused transitional capability\n",
-      "Upgradable upward-trending portal\n",
-      "Customer-focused mobile Graphic Interface\n",
-      "Upgradable holistic system engine\n",
-      "Visionary maximized Local Area Network\n",
-      "Networked bottom-line initiative\n",
-      "Automated even-keeled emulation\n",
-      "Pre-emptive bifurcated artificial intelligence\n",
-      "Multi-layered dynamic protocol\n",
-      "User-centric fault-tolerant task-force\n",
-      "Automated zero tolerance implementation\n",
-      "Quality-focused 24/7 superstructure\n",
-      "Adaptive local task-force\n",
-      "Enhanced regional moderator\n",
-      "Ameliorated disintermediate utilization\n",
-      "Sharable discrete budgetary management\n",
-      "Networked tertiary Graphical User Interface\n",
-      "Organic object-oriented core\n",
-      "Visionary real-time groupware\n",
-      "Ergonomic mission-critical moratorium\n",
-      "Inverse radical hierarchy\n",
-      "Expanded optimal pricing structure\n",
-      "Reverse-engineered 24/7 methodology\n",
-      "Virtual attitude-oriented migration\n",
-      "Fundamental disintermediate matrix\n",
-      "Proactive composite alliance\n",
-      "Cross-platform composite migration\n",
-      "Decentralized exuding strategy\n",
-      "Reduced 6thgeneration intranet\n",
-      "Multi-channeled next generation architecture\n",
-      "Focused solution-oriented matrix\n",
-      "Extended encompassing application\n",
-      "Pre-emptive tertiary standardization\n",
-      "Front-line client-server secured line\n",
-      "Devolved uniform complexity\n",
-      "Quality-focused asymmetric adapter\n",
-      "Organized bi-directional function\n",
-      "Streamlined encompassing encryption\n",
-      "Compatible logistical paradigm\n",
-      "Innovative holistic hub\n",
-      "Digitized foreground array\n",
-      "Seamless zero-defect solution\n",
-      "Digitized solution-oriented product\n",
-      "Cross-platform tertiary hub\n",
-      "Customer-focused disintermediate toolset\n",
-      "Cross-group heuristic forecast\n",
-      "Enterprise-wide client-driven policy\n",
-      "Cross-group multi-state task-force\n",
-      "Reverse-engineered regional knowledge user\n",
-      "Exclusive interactive approach\n",
-      "Up-sized intermediate website\n",
-      "Enhanced uniform service-desk\n",
-      "Virtual contextually-based circuit\n",
-      "Decentralized intangible encoding\n",
-      "Re-engineered asymmetric challenge\n",
-      "Phased system-worthy conglomeration\n",
-      "Monitored 24/7 approach\n",
-      "Mandatory multi-tasking encryption\n",
-      "Cloned responsive standardization\n",
-      "Reduced interactive matrix\n",
-      "Networked didactic time-frame\n",
-      "Up-sized discrete firmware\n",
-      "Reduced heuristic moratorium\n",
-      "Down-sized maximized function\n",
-      "Re-contextualized homogeneous flexibility\n",
-      "Business-focused dynamic info-mediaries\n",
-      "Operative local pricing structure\n",
-      "Distributed multi-tasking strategy\n",
-      "Organic cohesive neural-net\n",
-      "Persevering interactive emulation\n",
-      "Customizable background monitoring\n",
-      "Reverse-engineered full-range Internet solution\n",
-      "Managed optimizing archive\n",
-      "Balanced mobile alliance\n",
-      "Diverse analyzing definition\n",
-      "Stand-alone zero tolerance algorithm\n",
-      "Streamlined web-enabled knowledgebase\n",
-      "Profound solution-oriented matrix\n",
-      "Polarized upward-trending Local Area Network\n",
-      "User-centric fault-tolerant archive\n",
-      "Synchronized 6thgeneration adapter\n",
-      "Balanced upward-trending productivity\n",
-      "Distributed high-level open architecture\n",
-      "Innovative exuding matrix\n",
-      "Optional tangible pricing structure\n",
-      "De-engineered static orchestration\n",
-      "Grass-roots dynamic emulation\n",
-      "Total real-time hardware\n",
-      "Extended multimedia firmware\n",
-      "Profit-focused modular product\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cursor = conn.cursor()\n",
-    "cursor.execute(\"SELECT * FROM public.campaign\\\n",
-    "                ORDER BY cf_id ASC LIMIT 100\")\n",
-    "for entry in cursor:\n",
-    "    print(entry.description)"
+    "# looking for moviews with christmas related keyword\n",
+    "df_christmas = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
+    "\n",
+    "christmas_movies = conn.cursor()\n",
+    "christmas_movies.execute(\"SELECT DISTINCT m.title, m.average_vote, m.popularity, m.tagline FROM \\\n",
+    "                movies m \\\n",
+    "                JOIN movieids_kw mkw \\\n",
+    "                ON m.movie_id = mkw.movie_id \\\n",
+    "                JOIN keywords kw \\\n",
+    "                ON mkw.keyword_id = kw.keyword_id \\\n",
+    "                WHERE kw.keyword LIKE '%christmas%' \\\n",
+    "                ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
+    "for entry in christmas_movies:\n",
+    "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
+    "    df_christmas.loc[len(df_christmas)] = list\n",
+    "\n",
+    "df_christmas.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looking for harrison ford movies\n",
+    "df_hford = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
+    "\n",
+    "h_ford_movies = conn.cursor()\n",
+    "h_ford_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, m.tagline \\\n",
+    "                        FROM movies m \\\n",
+    "                        JOIN credits_actor ca ON m.movie_id = ca.movie_id \\\n",
+    "                        JOIN actor a ON ca.actor_id = a.actor_id \\\n",
+    "                        WHERE a.actor = 'Harrison Ford' \\\n",
+    "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
+    "for entry in h_ford_movies:\n",
+    "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
+    "    df_hford.loc[len(df_hford)] = list\n",
+    "\n",
+    "df_hford.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looking for fantasy movies\n",
+    "df_fantasy = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
+    "\n",
+    "fantasy_movies = conn.cursor()\n",
+    "fantasy_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, m.tagline \\\n",
+    "                        FROM movies m \\\n",
+    "                        JOIN movieid_genre_ids mg ON m.movie_id = mg.movie_id \\\n",
+    "                        JOIN emoji_genre eg ON mg.genre_id = eg.genre_id \\\n",
+    "                        WHERE eg.genre = 'Fantasy' \\\n",
+    "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
+    "for entry in fantasy_movies:\n",
+    "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
+    "    df_fantasy.loc[len(df_fantasy)] = list\n",
+    "\n",
+    "df_fantasy.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looking for fantasy movies\n",
+    "df_bluhrmann = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
+    "\n",
+    "bluhrmann_movies = conn.cursor()\n",
+    "bluhrmann_movies.execute(\"SELECT DISTINCT m.title, m.average_vote, m.popularity, m.tagline \\\n",
+    "                        FROM movies m \\\n",
+    "                        JOIN movieid_director_id mdi ON m.movie_id = mdi.movie_id \\\n",
+    "                        JOIN directors d ON mdi.director_id = d.director_id \\\n",
+    "                        JOIN movieid_genre_ids mg ON m.movie_id = mg.movie_id \\\n",
+    "                        WHERE d.director = 'Baz Luhrmann' \\\n",
+    "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
+    "for entry in bluhrmann_movies:\n",
+    "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
+    "    df_bluhrmann.loc[len(df_bluhrmann)] = list\n",
+    "\n",
+    "df_bluhrmann.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looking for fantasy movies\n",
+    "df_ocean= pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
+    "\n",
+    "ocean_movies = conn.cursor()\n",
+    "ocean_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, STRING_AGG(concat (eg.genre, eg.genre_emoji), ',') AS genres_with_emojis \\\n",
+    "                        FROM movies m \\\n",
+    "                        JOIN movieids_kw mk ON m.movie_id = mk.movie_id \\\n",
+    "                        JOIN keywords k ON mk.keyword_id = k.keyword_id \\\n",
+    "                        JOIN movieid_genre_ids mg ON m.movie_id = mg.movie_id \\\n",
+    "                        JOIN emoji_genre eg ON mg.genre_id = eg.genre_id \\\n",
+    "                        WHERE k.keyword = 'ocean' \\\n",
+    "                        GROUP BY m.title, m.average_vote, popularity \\\n",
+    "                        ORDER BY m.average_vote DESC, m.popularity DESC;\")\n",
+    "for entry in ocean_movies:\n",
+    "    list = [entry.title, entry.average_vote, entry.popularity, entry.genres_with_emojis]\n",
+    "    df_ocean.loc[len(df_ocean)] = list\n",
+    "\n",
+    "df_ocean.head(10)"
    ]
   }
  ],
