added comments to query notebook

--- a/ODBC_test/obdc_test.ipynb
+++ b/ODBC_test/obdc_test.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import required libraries\n",
     "import pyodbc\n",
     "import pandas as pd"
    ]
@@ -17,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create dictionary containing connection information to local postgresql db\n",
     "config = dict(\n",
     "    server = 'localhost',\n",
     "    port = 5432,\n",
@@ -25,14 +23,12 @@
     "    username = 'postgres',\n",
     "    password = 'postgres')\n",
     "\n",
-    "# create connection string to be fed into connect function\n",
     "conn_str = (\n",
     "    'SERVER={server},{port};' +\n",
     "    'DATABASE={database};' +\n",
     "    'UID={username};' +\n",
     "    'PWD={password}')\n",
     "\n",
-    "# connect to our movie database using configuration string\n",
     "conn = pyodbc.connect(\n",
     "    r'DRIVER={PostgreSQL Unicode(x64)};' +\n",
     "    conn_str.format(**config))\n"
@@ -45,10 +41,8 @@
    "outputs": [],
    "source": [
     "# looking for moviews with christmas related keyword\n",
-    "# create empty dataframe with column headers defined\n",
     "df_christmas = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
     "\n",
-    "# create a cursor and run query through the cursor\n",
     "christmas_movies = conn.cursor()\n",
     "christmas_movies.execute(\"SELECT DISTINCT m.title, m.average_vote, m.popularity, m.tagline FROM \\\n",
     "                movies m \\\n",
@@ -58,13 +52,10 @@
     "                ON mkw.keyword_id = kw.keyword_id \\\n",
     "                WHERE kw.keyword LIKE '%christmas%' \\\n",
     "                ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
-    "\n",
-    "# loop through the cursor and add each query result to a dataframe\n",
     "for entry in christmas_movies:\n",
     "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
     "    df_christmas.loc[len(df_christmas)] = list\n",
     "\n",
-    "# display dataframe\n",
     "df_christmas.head(10)"
    ]
   },
@@ -75,10 +66,8 @@
    "outputs": [],
    "source": [
     "# looking for harrison ford movies\n",
-    "# create empty dataframe with column headers defined\n",
     "df_hford = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
     "\n",
-    "# create a cursor and run query through the cursor\n",
     "h_ford_movies = conn.cursor()\n",
     "h_ford_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, m.tagline \\\n",
     "                        FROM movies m \\\n",
@@ -86,13 +75,10 @@
     "                        JOIN actor a ON ca.actor_id = a.actor_id \\\n",
     "                        WHERE a.actor = 'Harrison Ford' \\\n",
     "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
-    "\n",
-    "# loop through the cursor and add each query result to a dataframe\n",
     "for entry in h_ford_movies:\n",
     "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
     "    df_hford.loc[len(df_hford)] = list\n",
     "\n",
-    "# display dataframe\n",
     "df_hford.head(10)"
    ]
   },
@@ -103,10 +89,8 @@
    "outputs": [],
    "source": [
     "# looking for fantasy movies\n",
-    "# create empty dataframe with column headers defined\n",
     "df_fantasy = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
     "\n",
-    "# create a cursor and run query through the cursor\n",
     "fantasy_movies = conn.cursor()\n",
     "fantasy_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, m.tagline \\\n",
     "                        FROM movies m \\\n",
@@ -114,13 +98,10 @@
     "                        JOIN emoji_genre eg ON mg.genre_id = eg.genre_id \\\n",
     "                        WHERE eg.genre = 'Fantasy' \\\n",
     "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
-    "\n",
-    "# loop through the cursor and add each query result to a dataframe\n",
     "for entry in fantasy_movies:\n",
     "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
     "    df_fantasy.loc[len(df_fantasy)] = list\n",
     "\n",
-    "# display dataframe\n",
     "df_fantasy.head(10)"
    ]
   },
@@ -131,10 +112,8 @@
    "outputs": [],
    "source": [
     "# looking for fantasy movies\n",
-    "# create empty dataframe with column headers defined\n",
     "df_bluhrmann = pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
     "\n",
-    "# create a cursor and run query through the cursor\n",
     "bluhrmann_movies = conn.cursor()\n",
     "bluhrmann_movies.execute(\"SELECT DISTINCT m.title, m.average_vote, m.popularity, m.tagline \\\n",
     "                        FROM movies m \\\n",
@@ -143,13 +122,10 @@
     "                        JOIN movieid_genre_ids mg ON m.movie_id = mg.movie_id \\\n",
     "                        WHERE d.director = 'Baz Luhrmann' \\\n",
     "                        ORDER BY m.average_vote DESC, m.popularity DESC\")\n",
-    "\n",
-    "# loop through the cursor and add each query result to a dataframe\n",
     "for entry in bluhrmann_movies:\n",
     "    list = [entry.title, entry.average_vote, entry.popularity, entry.tagline]\n",
     "    df_bluhrmann.loc[len(df_bluhrmann)] = list\n",
     "\n",
-    "# display dataframe\n",
     "df_bluhrmann.head(10)"
    ]
   },
@@ -159,10 +135,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# looking for movies related to the ocean and outputting genre results with corresponding emojis\n",
-    "# create empty dataframe with column headers defined\n",
+    "# looking for fantasy movies\n",
     "df_ocean= pd.DataFrame(columns = ['Title','Average Vote','Popularity','Tagline'])\n",
-    "# create a cursor and run query through the cursor\n",
+    "\n",
     "ocean_movies = conn.cursor()\n",
     "ocean_movies.execute(\"SELECT m.title, m.average_vote, m.popularity, STRING_AGG(concat (eg.genre, eg.genre_emoji), ', ') AS genres_with_emojis \\\n",
     "                        FROM movies m \\\n",
@@ -173,13 +148,10 @@
     "                        WHERE k.keyword = 'ocean' \\\n",
     "                        GROUP BY m.title, m.average_vote, popularity \\\n",
     "                        ORDER BY m.average_vote DESC, m.popularity DESC;\")\n",
-    "\n",
-    "# loop through the cursor and add each query result to a dataframe\n",
     "for entry in ocean_movies:\n",
     "    list = [entry.title, entry.average_vote, entry.popularity, entry.genres_with_emojis]\n",
     "    df_ocean.loc[len(df_ocean)] = list\n",
     "\n",
-    "# display dataframe\n",
     "df_ocean.head(10)"
    ]
   }
