--- a/obdc_query.ipynb
+++ b/obdc_query.ipynb
@@ -182,6 +182,15 @@
     "# display dataframe\n",
     "df_ocean.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
